[gd_scene load_steps=7 format=3 uid="uid://dqg7fn03jolvy"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_1wmwq"]
[ext_resource type="Texture2D" uid="uid://d354bltfmayto" path="res://icon.svg" id="1_phi54"]
[ext_resource type="PackedScene" uid="uid://c3niokt1xkdub" path="res://scene/bullet.tscn" id="2_elhfg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ha6k5"]
size = Vector2(120, 375)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wv57v"]
size = Vector2(140, 400)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_vth4g"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("GunRotation:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:vitality")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("ProgressBar:value")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("ProgressBar:visible")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath("Icon:visible")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath("GunRotation/gun:visible")
properties/6/spawn = true
properties/6/replication_mode = 1

[node name="player" type="CharacterBody2D" groups=["player"]]
scale = Vector2(0.2, 0.2)
script = ExtResource("1_1wmwq")
bullet = ExtResource("2_elhfg")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(0, -6.00001)
scale = Vector2(1, 3.03125)
texture = ExtResource("1_phi54")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.19209e-06, -7.50002)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_ha6k5")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-4.47035e-07, -4.99999)
shape = SubResource("RectangleShape2D_wv57v")

[node name="GunRotation" type="Node2D" parent="."]

[node name="gun" type="Sprite2D" parent="GunRotation"]
position = Vector2(252, 0)
scale = Vector2(2, 0.625)
texture = ExtResource("1_phi54")

[node name="bulletSpawn" type="Node2D" parent="GunRotation"]
position = Vector2(364, 0)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_vth4g")

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0, 1)
offset_left = -75.0
offset_top = -265.0
offset_right = 80.0
offset_bottom = -213.0
max_value = 5.0
step = 1.0
value = 5.0
show_percentage = false

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
